--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/public/css/admin_index.css">
+    <link rel="stylesheet" href="/public/css/reset.css">
     <script src="/public/js/jquery-3.2.0.min.js"></script>
     <script src="/public/js/npm.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
